[gd_scene load_steps=14 format=3 uid="uid://bllickk0pk5b8"]

[ext_resource type="Script" path="res://Magic/MagicCreationMenu.gd" id="1_ovg3u"]
[ext_resource type="FontFile" uid="uid://tffy4cxls2dq" path="res://Art/KodeMono-Regular.ttf" id="2_578rg"]
[ext_resource type="Script" path="res://Magic/MagicCards/CardList.gd" id="3_d1bvh"]
[ext_resource type="Script" path="res://Magic/MagicSpells/SpellList.gd" id="4_xl77e"]
[ext_resource type="PackedScene" uid="uid://dqatyjcy8scuy" path="res://Magic/MagicSpells/SpellButton.tscn" id="5_a46rx"]
[ext_resource type="PackedScene" uid="uid://dspt0twvtj76f" path="res://SpellCover.tscn" id="7_enb07"]
[ext_resource type="PackedScene" uid="uid://brbjl2x1wttyr" path="res://SpellCreation.tscn" id="8_3dm7t"]
[ext_resource type="PackedScene" uid="uid://dprovuraroe3v" path="res://World/UI/MagicCardUI.tscn" id="8_pnt21"]
[ext_resource type="Resource" uid="uid://uwu0oq7tl6uy" path="res://Magic/MagicCards/Resources/Type/Blast.tres" id="9_ul3cl"]

[sub_resource type="Animation" id="Animation_hx0fs"]
resource_name = "BookUp"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpellCreation:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(441, 277), Vector2(441, -291)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NoShapeCard:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(204, 79), Vector2(204, -482)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NoSpellCard:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(195, 151), Vector2(195, -428)]
}

[sub_resource type="Animation" id="Animation_ic5bk"]
resource_name = "MoveLeft"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(350, 0)]
}

[sub_resource type="Animation" id="Animation_eakmp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpellCreation:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(441, 277)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NoShapeCard:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(204, 79)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NoSpellCard:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(195, 151)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2kd07"]
_data = {
"BookUp": SubResource("Animation_hx0fs"),
"MoveLeft": SubResource("Animation_ic5bk"),
"RESET": SubResource("Animation_eakmp")
}

[node name="Magic" type="Control" node_paths=PackedStringArray("element", "type", "style", "cardList")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovg3u")
element = NodePath("Control/Element")
type = NodePath("Control/SpellType")
style = NodePath("Control/Style")
cardList = NodePath("CardSelection/Control/ScrollContainer/CardList")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 0.713726)

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Element" type="Button" parent="Control"]
layout_mode = 0
offset_left = 529.0
offset_top = 115.0
offset_right = 619.0
offset_bottom = 205.0
text = "ELEMENT"

[node name="Style" type="Button" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = 396.0
offset_right = 458.0
offset_bottom = 486.0
text = "STYLE"

[node name="SpellType" type="Button" parent="Control"]
layout_mode = 0
offset_left = 691.0
offset_top = 394.0
offset_right = 781.0
offset_bottom = 484.0
text = "TYPE"

[node name="Line2D" type="Line2D" parent="Control"]
z_index = -1
position = Vector2(693, 399)
points = PackedVector2Array(49, 49, -119, -233, -277, 49, 49, 49, -119, -233)

[node name="CurrentSpell" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
offset_top = 15.0
offset_right = 537.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_578rg")
theme_override_font_sizes/font_size = 40

[node name="Settings" type="Button" parent="Control"]
layout_mode = 0
offset_left = 376.0
offset_top = 544.0
offset_right = 773.0
offset_bottom = 602.0
theme_override_font_sizes/font_size = 20
text = "SETTINGS"

[node name="CardSelection" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -345.0
offset_right = 5.0
offset_bottom = 650.0
color = Color(0.20871, 0.20871, 0.20871, 1)

[node name="Control" type="Control" parent="CardSelection"]
anchors_preset = 0
offset_left = 13.0
offset_top = 76.0
offset_right = 332.0
offset_bottom = 632.0

[node name="ScrollContainer" type="ScrollContainer" parent="CardSelection/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardList" type="VBoxContainer" parent="CardSelection/Control/ScrollContainer" node_paths=PackedStringArray("magicMenu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("3_d1bvh")
magicMenu = NodePath("../../../..")

[node name="Cancel" type="Button" parent="CardSelection/Control"]
layout_mode = 0
offset_left = 33.0
offset_top = 517.0
offset_right = 291.0
offset_bottom = 553.0
text = "CANCEL"

[node name="SpellSelection" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 870.0
offset_top = -3.0
offset_right = 1154.0
offset_bottom = 647.0
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="Control" type="Control" parent="SpellSelection"]
layout_mode = 3
anchors_preset = 0
offset_left = 13.0
offset_top = 76.0
offset_right = 253.0
offset_bottom = 632.0

[node name="ScrollContainer" type="ScrollContainer" parent="SpellSelection/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpellList" type="VBoxContainer" parent="SpellSelection/Control/ScrollContainer" node_paths=PackedStringArray("textEdit", "magicMenu")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("4_xl77e")
textEdit = NodePath("../../../../TextEdit")
magicMenu = NodePath("../../../..")

[node name="Button" parent="SpellSelection/Control/ScrollContainer/SpellList" instance=ExtResource("5_a46rx")]
layout_mode = 2
focus_mode = 0

[node name="AddButton" type="Button" parent="SpellSelection/Control/ScrollContainer/SpellList"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="SpellSelection/Control/ScrollContainer/SpellList/AddButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -11.5
offset_right = 5.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_578rg")
theme_override_font_sizes/font_size = 50
text = "+"

[node name="Category" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -766.0
offset_top = -309.0
offset_right = -742.0
offset_bottom = -257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_578rg")
theme_override_font_sizes/font_size = 40
text = "
"

[node name="Spell" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 357.0
offset_top = -309.0
offset_right = 501.0
offset_bottom = -257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_578rg")
theme_override_font_sizes/font_size = 40
text = "Spells"

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 884.0
offset_top = 69.0
offset_right = 1119.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("2_578rg")
theme_override_font_sizes/font_size = 30
placeholder_text = "Spell Name"

[node name="Node2D" parent="." node_paths=PackedStringArray("MagicMenu", "SpellList") instance=ExtResource("7_enb07")]
visible = false
MagicMenu = NodePath("..")
SpellList = NodePath("../SpellSelection/Control/ScrollContainer/SpellList")

[node name="SpellCreation" parent="." node_paths=PackedStringArray("MagicMenu", "SpellList") instance=ExtResource("8_3dm7t")]
visible = false
offset_left = 441.0
offset_top = 277.0
offset_right = 441.0
offset_bottom = 277.0
MagicMenu = NodePath("..")
SpellList = NodePath("../SpellSelection/Control/ScrollContainer/SpellList")

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 75.0
offset_bottom = 75.0
text = "Exit"

[node name="NoShapeCard" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 204.0
offset_top = 79.0
offset_right = 687.0
offset_bottom = 464.0
color = Color(0.4, 0.4, 0.4, 1)

[node name="Label" type="Label" parent="NoShapeCard"]
layout_mode = 0
offset_left = 73.0
offset_top = 25.0
offset_right = 413.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("2_578rg")
theme_override_font_sizes/font_size = 27
text = "You need a Shape Card"

[node name="BaseCardAdd" type="Button" parent="NoShapeCard"]
layout_mode = 0
offset_left = 166.0
offset_top = 295.0
offset_right = 306.0
offset_bottom = 361.0
text = "Attach Shape"

[node name="ColorRect2" parent="NoShapeCard" instance=ExtResource("8_pnt21")]
layout_mode = 0
offset_left = 175.0
offset_top = 73.0
offset_right = 475.0
offset_bottom = 573.0
scale = Vector2(0.4, 0.4)
cardToShow = ExtResource("9_ul3cl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2kd07")
}

[node name="NoSpellCard" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 151.0
offset_right = 713.0
offset_bottom = 440.0
color = Color(0.4, 0.4, 0.4, 1)

[node name="Label" type="Label" parent="NoSpellCard"]
layout_mode = 0
offset_left = 12.0
offset_top = 59.0
offset_right = 495.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("2_578rg")
theme_override_font_sizes/font_size = 52
text = "No Spell is currently shown"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Control/Element" to="." method="_on_element_pressed"]
[connection signal="pressed" from="Control/Style" to="." method="_on_style_pressed"]
[connection signal="pressed" from="Control/SpellType" to="." method="_on_spell_type_pressed"]
[connection signal="pressed" from="Control/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CardSelection/Control/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="SpellSelection/Control/ScrollContainer/SpellList/AddButton" to="SpellSelection/Control/ScrollContainer/SpellList" method="_on_add_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="NoShapeCard/BaseCardAdd" to="." method="_on_base_card_add_pressed"]
